Initial setup for script.js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="searchTool" class="searchTool">
       <form>
         <div class="typeField">
-          <input id="query" placeholder="Enter Search Terms">
+          <input id="queryField" placeholder="Enter Search Terms">
         </div>
         <!-- typeField -->
         <div class="button">
