--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Image Picker</title>
   <link href="css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="">
 </head>
 
 <body>
