--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <!-- searchTool -->
   </header>
+  <div class="clickText"></div>
   <div class="searchResults"></div>
   <script src="js/script.js"></script>
 </body>
