List of past selections are shown at the bottom. Items are not scrollable yet. Need to make them that

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <!-- searchTool -->
   </header>
   <div class="clickText"></div>
+  <div class="pastSelectionsText"></div>
   <div class="searchResults"></div>
+  <div class="pastSelections"></div>
   <script src="js/script.js"></script>
 </body>
 
