Added the filters. Only added 3 filters so far. App is technically complete. I might add more filters later. User searches for an image, selects an image to set it as a background. Dialog box appears in which user selects the filter to apply. Filter is applied and image is set as the background.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
   </header>
   <div class="clickText"></div>
   <div class="pastSelectionsText"></div>
+  <dialog id='dialog'>
+    <p><b>Please select the filter to apply</b></p>
+    <form method='dialog'>
+      <input id='original' type='button' value='Original'>
+      <input id='grayscale' type='button' value='Grayscale'>
+      <input id='invert' type='button' value='Invert'>
+      <input id='enhance' type='button' value='Enhance'>
+    </form>
+  </dialog>
   <div class="searchResults"></div>
   <div class="pastSelections"></div>
   <script src="js/script.js"></script>
