Added more filters. App is complete.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <input id='grayscale' type='button' value='Grayscale'>
       <input id='invert' type='button' value='Invert'>
       <input id='enhance' type='button' value='Enhance'>
+      <input id='sepia' type='button' value='Sepia'>
+      <input id='opacity' type='button' value='Opacity'>
+      <input id='brighten' type='button' value='Brighten'>
+      <input id='darken' type='button' value='Darken'>
     </form>
   </dialog>
   <div class="searchResults"></div>
